# psychopy-sphinx-themes

./: pyproject.toml
psychopy_sphinx_themes/: __init__.py
psychopy_sphinx_themes/psychopy_plugin/static/: psychopy.css
