[project]
name = "psychopy-sphinx-themes"
version = "0.0.0"

description = "Themes for PsychoPy and plugins documentations, building in sphinx"
authors = [
  { name = "Open Science Tools", email = "support@opensceincetools.org" },
]
license = { text = "MIT" }

[project.entry-points."sphinx.html_themes"]
psychopy_plugin = "psychopy_sphinx_themes"
psychopy = "psychopy_sphinx_themes"

[tool.setuptools.package-data]
"psychopy_sphinx_themes" = ["*.html", "*.css", "*.js", "*.png", "*.jpg", "*.jpeg", "*.svg"]
